<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:background="@color/app_background">

    <TextView
        android:id="@+id/yonerge_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yonerge"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle=""
        android:paddingBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="80dp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/uyari_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uyari"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle=""
        app:layout_constraintTop_toBottomOf="@+id/yonerge_text_view"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="20dp"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/uyari_text_view">

        <TextView
            android:id="@+id/puanlama_tablosu_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puanlar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle=""
            android:paddingTop="50dp"
            android:paddingStart="30dp"

            />

        <TextView
            android:id="@+id/puanlama_tablosu_sonuc_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depresyon_duzeyi"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle=""
            android:paddingTop="50dp"
            android:paddingStart="30dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/start_survey_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:text="@string/teste_basla"
            />

        <Button
            android:id="@+id/saved_results_button"
            android:layout_height="wrap_content"
            android:text="Geçmiş Sonuçları Gör"
            android:layout_width="250dp"
            android:backgroundTint="@color/button_color"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>